// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`time series useTicketsClosedTimeSeries should create reporting filters 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "Ticket.periodStart",
        "operator": "afterDate",
        "values": [
          "2021-05-29T00:00:00.000",
        ],
      },
      {
        "member": "Ticket.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59.000",
        ],
      },
      {
        "member": "FirstTicketState.messageIntegrationId",
        "operator": "equals",
        "values": [
          "1",
        ],
      },
      {
        "member": "FirstTicketState.messageChannel",
        "operator": "equals",
        "values": [
          "email",
          "chat",
        ],
      },
      {
        "member": "Ticket.assigneeUserId",
        "operator": "equals",
        "values": [
          "2",
        ],
      },
      {
        "member": "Ticket.tags",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "Ticket.isTrashed",
        "operator": "equals",
        "values": [
          "0",
        ],
      },
      {
        "member": "Ticket.isSpam",
        "operator": "equals",
        "values": [
          "0",
        ],
      },
    ],
    "measures": [
      "Ticket.ticketCount",
    ],
    "order": [
      [
        "Ticket.closedDatetime",
        "asc",
      ],
    ],
    "segments": [
      "Ticket.closedTickets",
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2021-05-29T00:00:00.000",
          "2021-06-04T23:59:59.000",
        ],
        "dimension": "Ticket.closedDatetime",
        "granularity": "week",
      },
    ],
    "timezone": "America/Los_angeles",
  },
]
`;

exports[`time series useTicketsCreatedTimeSeries should create reporting filters 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "Ticket.periodStart",
        "operator": "afterDate",
        "values": [
          "2021-05-29T00:00:00.000",
        ],
      },
      {
        "member": "Ticket.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59.000",
        ],
      },
      {
        "member": "FirstTicketState.messageIntegrationId",
        "operator": "equals",
        "values": [
          "1",
        ],
      },
      {
        "member": "FirstTicketState.messageChannel",
        "operator": "equals",
        "values": [
          "email",
          "chat",
        ],
      },
      {
        "member": "Ticket.assigneeUserId",
        "operator": "equals",
        "values": [
          "2",
        ],
      },
      {
        "member": "Ticket.tags",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "Ticket.isTrashed",
        "operator": "equals",
        "values": [
          "0",
        ],
      },
      {
        "member": "Ticket.isSpam",
        "operator": "equals",
        "values": [
          "0",
        ],
      },
    ],
    "measures": [
      "Ticket.ticketCount",
    ],
    "order": [
      [
        "Ticket.createdDatetime",
        "asc",
      ],
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2021-05-29T00:00:00.000",
          "2021-06-04T23:59:59.000",
        ],
        "dimension": "Ticket.createdDatetime",
        "granularity": "week",
      },
    ],
    "timezone": "America/Los_angeles",
  },
]
`;
